.manifests_common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-project-ingress
  namespace: project
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: project-frontend-svc
            port:
              number: 80
      - path: /static/*
        pathType: Exact
        backend:
            service:
              name: project-frontend-svc
              port:
                number: 80
      - path: /status
        pathType: Exact
        backend:
            service:
              name: mainapp-svc
              port:
                number: 80
      - path: /dailyimage
        pathType: Exact
        backend:
            service:
              name: mainapp-svc
              port:
                number: 80
      - path: /todos
        pathType: Exact
        backend:
            service:
              name: project-backend-svc
              port:
                number: 2345
      - path: /pingpong
        pathType: Exact
        backend:
            service:
              name: pingpong-svc
              port:
                number: 80
